Fix text alignment for the progressbar text in IE.

--- a/data/css/default.css
+++ b/data/css/default.css
@@ -225,8 +225,7 @@ width:100%;
 height:100%;
 overflow:visible;
 text-align:center;
-line-height:16px;
-_line-height:14px;
+vertical-align: middle;
 }
 
 tr.seasonheader {
